--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
    <link rel="stylesheet" href="styles.css">
    <link type="image/png" sizes="96x96" rel="icon" href="icon/icons8-calculator-96.png">
-   <title>Calulator</title>
+   <title>Calculator</title>
 </head>
 <body>
 <div class="container">
